--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
     </div>
     <footer>
      <a href="tos.html">Our tos</a>
+     <a href="https://discord.gg/549C2SsVQn">Discord Server</a>
+
     </footer>
 </body>
 </html>
