--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </header>
     <div class="container">
         <div class="product">
-            <span>Ballers Chain</span>
+            <span>Ballers Chain          £5</span>
             <a href="ballers.html">View Details</a>
         </div>
         <div class="center-text">
