--- a/ballers.html
+++ b/ballers.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ballers Chain</h1>
+        <h1>Ballers Chain           £5</h1>
         <img src="img/ballers.png" alt="Ballers">
         <p>The gang ballers is typically known for being recless and betraying others. To upgrade your roleplay experience purchase the Ballers chain.</p>
     </div>
