--- a/ballers.html
+++ b/ballers.html
@@ -16,7 +16,9 @@
     <div class="container">
         <h1>Ballers Chain           £5</h1>
         <img src="img/ballers.png" alt="Ballers">
-        <p>The gang ballers is typically known for being recless and betraying others. To upgrade your roleplay experience purchase the Ballers chain.</p>
+        <p>The gang ballers is typically known for being recless and betraying others. To upgrade your roleplay experience purchase the Ballers chain.
+        Cost £5
+        </p>
     </div>
 </body>
 </html>
